--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,11 +36,11 @@ code {
   opacity: 0.9;
 }
 
-.btn-secondary {
+.btn-secondary1 {
   background-color: #7430f9;
 }
 
-.btn-secondary:hover {
+.btn-secondary1:hover {
   background-color: #7430f9;
   opacity: 0.9;
 }
